IVYPORTAL-18574-Aggregation-for-custom-statistic-chart-configuration
-tmp
- implement drop-down UI
- next step: check & filter aggregate for each chartType